--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,19 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container{
+  /* width: 50px; */
+margin: 50px;
+  float: left;
+  margin-left:300px; 
+}
+
+.btnSize{
+  width: 50px;
+  float:left;
+  
+}
+
+.position{
+  margin-top:150px;
 }
